[gd_scene load_steps=5 format=3 uid="uid://bqdkvre63705f"]

[ext_resource type="Script" path="res://Enemies/Level_1/SpiderBot/e_SpiderBot.gd" id="1_31ntb"]
[ext_resource type="PackedScene" uid="uid://djnxfcqwdydru" path="res://Characters/SpiderBot/spider_bot.tscn" id="2_u86gs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_suntx"]
radius = 57.0088

[sub_resource type="CircleShape2D" id="CircleShape2D_x5ujo"]
radius = 52.0384

[node name="e_SpiderBot" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_31ntb")

[node name="SpiderBot" parent="." instance=ExtResource("2_u86gs")]

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, -3)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_suntx")
debug_color = Color(0.701961, 0, 0.0313726, 0.447059)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-2, -3)
shape = SubResource("CircleShape2D_x5ujo")

[node name="dmg_rate" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="_on_hurtbox_body_exited"]
[connection signal="timeout" from="dmg_rate" to="." method="_on_dmg_rate_timeout"]
